--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <div class="mj-calendar__form">
 
-	<input class="mj-input js-input" data-bind="value: noteForm.note, note" placeholder="What happened?">
+	<input class="mj-input js-input" data-bind="value: noteForm.note" placeholder="What happened?">
 
 	<input class="mj-input" data-bind="value: noteForm.day, datepicker" placeholder="When?">
 
