Moved note to a popup.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 	<a class="mj-link" data-bind="click: logOut" href="#">Log out</a>
 </div>
 
-<div class="cal-popup__overlay js-popup js-popup__note js-hidden js-close" data-bind="popup">
+<div class="cal-popup__overlay js-popup js-popup__note js-hidden" data-bind="popup">
+
+	<div class="cal-popup__black" class="js-close"></div>
 
 	<div class="cal-popup__box">
 
