--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<form class="cal-popup__form">
 
-			<textarea class="cal-popup__input js-input" data-bind="value: noteForm.note, note" placeholder="What happened?">
+			<textarea class="cal-popup__input js-input _area" data-bind="value: noteForm.note, note" placeholder="What happened?">
 			</textarea>
 
 			<input type="hidden" class="cal-popup__input" data-bind="value: noteForm.day, datepicker" placeholder="When?">
