--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 
 		<form class="cal-popup__form">
 
+
+			<div>
 			<input class="cal-popup__input js-input js-counter__name ui-front" data-bind="value: counterForm.name, counterAutocomplete, counterData: counters" placeholder="Name your counter">
+			</div>
+
 			<input class="cal-popup__input js-input" data-bind="value: counterForm.value" placeholder="Kilometers, minutes, kcal etc.">
 
 			<button data-bind="click: addCounter" class="cal-popup__button mj-button js-close">
