--- a/index.html
+++ b/index.html
@@ -2915,63 +2915,63 @@
 			</svg>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="561.5" y="271.5"
-				  transform="rotate(15, 561.5, 271.5)" text-anchor="middle">January
+			<text x="561.2555373607581" y="271.2599747690738"
+				  transform="rotate(15, 561.2555373607581, 271.2599747690738)" text-anchor="middle">January
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="667.5" y="332.53"
-				  transform="rotate(45, 667.5, 332.53)" text-anchor="middle">February
+			<text x="667.3708103719498" y="332.48506981335413"
+				  transform="rotate(45, 667.3708103719498, 332.48506981335413)" text-anchor="middle">February
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="728.5" y="438.57"
-				  transform="rotate(75, 728.5, 438.57)" text-anchor="middle">March
+			<text x="728.6872172366697" y="438.54760645387137"
+				  transform="rotate(75, 728.6872172366697, 438.54760645387137)" text-anchor="middle">March
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="728.5" y="561.5"
-				  transform="rotate(105, 728.5, 561.5)" text-anchor="middle">April
+			<text x="728.7926637694936" y="561.0586357959255"
+				  transform="rotate(105, 728.7926637694936, 561.0586357959255)" text-anchor="middle">April
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="667.5" y="667.5"
-				  transform="rotate(135, 667.5, 667.5)" text-anchor="middle">May
+			<text x="667.6589259025623" y="667.2265665652415"
+				  transform="rotate(135, 667.6589259025623, 667.2265665652415)" text-anchor="middle">May
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="561.5" y="728.5"
-				  transform="rotate(165, 561.5, 728.5)" text-anchor="middle">June
+			<text x="561.6492042062016" y="728.634239825845"
+				  transform="rotate(165, 561.6492042062016, 728.634239825845)" text-anchor="middle">June
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="439.53" y="728.5"
-				  transform="rotate(195, 439.53, 728.5)" text-anchor="middle">July
+			<text x="439.13831100250013" y="728.8451328133758"
+				  transform="rotate(195, 439.13831100250013, 728.8451328133758)" text-anchor="middle">July
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="332.56" y="667.5"
-				  transform="rotate(225, 332.56, 667.5)" text-anchor="middle">August
+			<text x="332.91780112662036" y="667.8027974130241"
+				  transform="rotate(225, 332.91780112662036, 667.8027974130241)" text-anchor="middle">August
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="271.5" y="561.5"
-				  transform="rotate(255, 271.5, 561.5)" text-anchor="middle">September
+			<text x="271.4189069623005" y="561.8459691951753"
+				  transform="rotate(255, 271.4189069623005, 561.8459691951753)" text-anchor="middle">September
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="271.57" y="439.5"
-				  transform="rotate(285, 271.57, 439.5)" text-anchor="middle">October
+			<text x="271.10256767629727" y="439.3353028886164"
+				  transform="rotate(285, 271.10256767629727, 439.3353028886164)" text-anchor="middle">October
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="332.55" y="333.54"
-				  transform="rotate(315, 332.55, 333.54)" text-anchor="middle">November
+			<text x="332.05345538855215" y="333.06229259668464"
+				  transform="rotate(315, 332.05345538855215, 333.06229259668464)" text-anchor="middle">November
 			</text>
 		</g>
 		<g class="mj-calendar__month">
-			<text x="437.56" y="271.57"
-				  transform="rotate(345, 437.56, 271.57)" text-anchor="middle">December
+			<text x="437.95731163271796" y="271.47222308839497"
+				  transform="rotate(345, 437.95731163271796, 271.47222308839497)" text-anchor="middle">December
 			</text>
 		</g>
 	</g>
