--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
 
 		</form>
 
-		<div class="cal-popup__title">Add a counter</div>
-		<div class="cal-popup__title _sub">Save numeric data on calendar and we'll make nice graphs %)</div>
+		<!--<div class="cal-popup__title">Add a counter</div>-->
+		<!--<div class="cal-popup__title _sub">Save numeric data on calendar and we'll make nice graphs %)</div>-->
 
-		<form class="cal-popup__form">
+		<!--<form class="cal-popup__form">-->
 
-			<div class="cal-popup__inputWrap ui-front">
-				<input class="cal-popup__input js-input js-counter__name"  data-bind="value: counterForm.name, counterAutocomplete, counterData: counters" placeholder="Name your counter">
-			</div>
+			<!--<div class="cal-popup__inputWrap ui-front">-->
+				<!--<input class="cal-popup__input js-input js-counter__name"  data-bind="value: counterForm.name, counterAutocomplete, counterData: counters" placeholder="Name your counter">-->
+			<!--</div>-->
 
-			<input class="cal-popup__input js-input"  data-bind="value: counterForm.value" placeholder="Kilometers, minutes, kcal etc.">
+			<!--<input class="cal-popup__input js-input"  data-bind="value: counterForm.value" placeholder="Kilometers, minutes, kcal etc.">-->
 
-			<button data-bind="click: addCounter" class="cal-popup__button mj-button js-close">
-				Gogo!
-			</button>
+			<!--<button data-bind="click: addCounter" class="cal-popup__button mj-button js-close">-->
+				<!--Gogo!-->
+			<!--</button>-->
 
-		</form>
+		<!--</form>-->
 
 	</div>
 
